tdf#46941 docx: don't balance columns before page-break-section

Pleasantly surprised to see we already don't balance before
regular page-breaks or at the end of the document. This adds
not balancing before a page-break-section.

Change-Id: Ifedff5cc45b154a005f13b3212154c443727e286